# app-generator

./: .gitignore  README.md  io.github.ecommunity.app-generator.yml  io.github.elementary-community.app-generator.yml  io.github.ellie_commons.app-generator.yml  meson.build
.github/workflows/: blank.yml  ci.yml  merge.yml
data/: Application.css  app-generator.appdata.xml.in  app-generator.desktop.in  app-generator.gresource.xml  app-generator.gschema.xml  app-generator.metainfo.xml.in  meson.build
po/: POTFILES  de.po  es.po  io.github.ecommunity.app-generator.pot  io.github.elementary-community.app-generator.pot  io.github.ellie_commons.app-generator.pot  ru.po
po/extra/: POTFILES  extra.pot  meson.build
src/: Application.vala  Config.vala.in  MainWindow.vala
src/Services/: FormControl.vala  FormGroup.vala  Validators.vala
src/Views/: Developer.vala  Form.vala  Success.vala
src/Widgets/: InvalidLabel.vala  Stepper.vala
